[E11.11] Add health check

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
             heroku_app_name: "tresmele-pokemon-fullstack" #Must be unique in Heroku
             heroku_email: "tresmele@gmail.com"
+            healthcheck: "https://tresmele-pokemon-fullstack.herokuapp.com/health"
+            checkstring: "ok"
