--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,6 +29,13 @@ jobs:
             command: npm run test:e2e
             start: npm run start-prod
             wait-on: http://localhost:5000
+        - name: Bump version and push tag
+          if: ${{ github.event_name == 'push' }}
+          uses: anothrNick/github-tag-action@1.33.0
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            WITH_V: true
+            DEFAULT_BUMP: patch
         - name: heroku deployment
           if: ${{ github.event_name == 'push' }}
           uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
