--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -1,9 +1,8 @@
 name: Health check
 
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron: '30 5 * * 1,3'
 
 jobs:
   health_check:
